feat(data-1128): map GTFS-RT Alert.url into PtSituationElement.InfoLinks