@@ -12,7 +12,6 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Component;
 import uk.org.ifopt.siri20.StopPlaceRef;
@@ -36,24 +35,24 @@ import java.util.List;
 @Component
 public class AlertMapper {
 
-    private static final SimpleDateFormat DATE_FORMATTER = new SimpleDateFormat("yyyyMMdd");
 
     private static final Logger logger = LoggerFactory.getLogger(AlertMapper.class);
 
     private static StopPlaceUpdaterService stopPlaceService;
 
     private final StopTimesService stopTimesService;
+    private final IMap<String, Long> sxStartActivePeriodMap;
+    private final IMap<String, Long> sxEndActivePeriodMap;
+    private final SimpleDateFormat yyyyMMddFormatter;
 
-    @Autowired
-    @Qualifier("getSxStartActivePeriodMap")
-    private IMap<String, Long> sxStartActivePeriodMap;
-
-    @Autowired
-    @Qualifier("getSxEndActivePeriodMap")
-    private IMap<String, Long> sxEndActivePeriodMap;
-
-    public AlertMapper(StopTimesService stopTimesService) {
+    public AlertMapper(StopTimesService stopTimesService,
+                       @Qualifier("getSxStartActivePeriodMap") IMap<String, Long> sxStartActivePeriodMap,
+                       @Qualifier("getSxEndActivePeriodMap")
+                       IMap<String, Long> sxEndActivePeriodMap) {
         this.stopTimesService = stopTimesService;
+        this.sxStartActivePeriodMap = sxStartActivePeriodMap;
+        this.sxEndActivePeriodMap = sxEndActivePeriodMap;
+        this.yyyyMMddFormatter = new SimpleDateFormat("yyyyMMdd");
     }
 
     /**
@@ -78,6 +77,7 @@ public class AlertMapper {
         situationNumber.setValue(feedEntity.getId());
         ptSituationElement.setSituationNumber(situationNumber);
         mapDescription(ptSituationElement, alert);
+        mapUrl(ptSituationElement, alert);
         mapPeriod(ptSituationElement, alert, gtfsrtApi.getActivePeriodDays());
         mapReasons(ptSituationElement, alert);
         mapAffects(ptSituationElement, alert, datasetId);
@@ -132,18 +132,12 @@ public class AlertMapper {
 
     private static SeverityEnumeration convertSeverity(GtfsRealtime.Alert.SeverityLevel severityLevel) {
 
-        switch (severityLevel) {
-            case UNKNOWN_SEVERITY:
-                return SeverityEnumeration.UNKNOWN;
-            case INFO:
-                return SeverityEnumeration.VERY_SLIGHT;
-            case WARNING:
-                return SeverityEnumeration.NORMAL;
-            case SEVERE:
-                return SeverityEnumeration.SEVERE;
-            default:
-                return SeverityEnumeration.UNDEFINED;
-        }
+        return switch (severityLevel) {
+            case UNKNOWN_SEVERITY -> SeverityEnumeration.UNKNOWN;
+            case INFO -> SeverityEnumeration.VERY_SLIGHT;
+            case WARNING -> SeverityEnumeration.NORMAL;
+            case SEVERE -> SeverityEnumeration.SEVERE;
+        };
     }
 
     private static void mapEffect(PtSituationElement ptSituationElement, GtfsRealtime.Alert alert) {
@@ -161,27 +155,17 @@ public class AlertMapper {
 
     private static ServiceConditionEnumeration convertEffectToCondition(GtfsRealtime.Alert.Effect effect) {
 
-        switch (effect) {
-            case NO_SERVICE:
-                return ServiceConditionEnumeration.NO_SERVICE;
-            case REDUCED_SERVICE:
-                return ServiceConditionEnumeration.SHORT_FORMED_SERVICE;
-            case SIGNIFICANT_DELAYS:
-                return ServiceConditionEnumeration.DELAYED;
-            case DETOUR:
-            case STOP_MOVED:
-                return ServiceConditionEnumeration.DIVERTED;
-            case ADDITIONAL_SERVICE:
-                return ServiceConditionEnumeration.ADDITIONAL_SERVICE;
-            case MODIFIED_SERVICE:
-                return ServiceConditionEnumeration.ALTERED;
-            case OTHER_EFFECT:
-                return ServiceConditionEnumeration.NORMAL_SERVICE;
-            case UNKNOWN_EFFECT:
-                return ServiceConditionEnumeration.UNKNOWN;
-            default:
-                return ServiceConditionEnumeration.UNDEFINED_SERVICE_INFORMATION;
-        }
+        return switch (effect) {
+            case NO_SERVICE -> ServiceConditionEnumeration.NO_SERVICE;
+            case REDUCED_SERVICE -> ServiceConditionEnumeration.SHORT_FORMED_SERVICE;
+            case SIGNIFICANT_DELAYS -> ServiceConditionEnumeration.DELAYED;
+            case DETOUR, STOP_MOVED -> ServiceConditionEnumeration.DIVERTED;
+            case ADDITIONAL_SERVICE -> ServiceConditionEnumeration.ADDITIONAL_SERVICE;
+            case MODIFIED_SERVICE -> ServiceConditionEnumeration.ALTERED;
+            case OTHER_EFFECT -> ServiceConditionEnumeration.NORMAL_SERVICE;
+            case UNKNOWN_EFFECT -> ServiceConditionEnumeration.UNKNOWN;
+            default -> ServiceConditionEnumeration.UNDEFINED_SERVICE_INFORMATION;
+        };
 
     }
 
@@ -192,7 +176,7 @@ public class AlertMapper {
      * @param alert              The GTFS-Realtime {@link GtfsRealtime.Alert} containing the affected entities.
      * @param datasetId          The identifier of the dataset associated with the alert.
      */
-    private static void mapAffects(PtSituationElement ptSituationElement, GtfsRealtime.Alert alert, String datasetId) {
+    private void mapAffects(PtSituationElement ptSituationElement, GtfsRealtime.Alert alert, String datasetId) {
         List<GtfsRealtime.EntitySelector> informedEntities = alert.getInformedEntityList();
         if (informedEntities == null || informedEntities.isEmpty())
             return;
@@ -326,7 +310,7 @@ public class AlertMapper {
         StopPointRef newStopRef = new StopPointRef();
         newStopRef.setValue(stopId);
         newStop.setStopPointRef(newStopRef);
-        affectedLine.getRoutes().getAffectedRoutes().get(0).getStopPoints().getAffectedStopPointsAndLinkProjectionToNextStopPoints().add(newStop);
+        affectedLine.getRoutes().getAffectedRoutes().getFirst().getStopPoints().getAffectedStopPointsAndLinkProjectionToNextStopPoints().add(newStop);
 
     }
 
@@ -344,16 +328,12 @@ public class AlertMapper {
             return false;
         }
 
-        AffectedRouteStructure firstRoute = affectedLine.getRoutes().getAffectedRoutes().get(0);
+        AffectedRouteStructure firstRoute = affectedLine.getRoutes().getAffectedRoutes().getFirst();
 
         for (Serializable affectedStopPointsAndLinkProjectionToNextStopPoint : firstRoute.getStopPoints().getAffectedStopPointsAndLinkProjectionToNextStopPoints()) {
 
-            if (!(affectedStopPointsAndLinkProjectionToNextStopPoint instanceof AffectedStopPointStructure)) {
-                continue;
-            }
-
-            AffectedStopPointStructure currentAffectedStopPoint = (AffectedStopPointStructure) affectedStopPointsAndLinkProjectionToNextStopPoint;
-            if (currentAffectedStopPoint.getStopPointRef().getValue().equals(stopId)) {
+            if (affectedStopPointsAndLinkProjectionToNextStopPoint instanceof AffectedStopPointStructure currentAffectedStopPoint
+                && currentAffectedStopPoint.getStopPointRef().getValue().equals(stopId)) {
                 return true;
             }
         }
@@ -430,7 +410,7 @@ public class AlertMapper {
     }
 
 
-    private static List<AffectedVehicleJourneyStructure> getVehicleJourneys(GtfsRealtime.EntitySelector informedEntity) {
+    private List<AffectedVehicleJourneyStructure> getVehicleJourneys(GtfsRealtime.EntitySelector informedEntity) {
         AffectsScopeStructure.VehicleJourneys vehicleJourneys = new AffectsScopeStructure.VehicleJourneys();
 
         if (informedEntity.hasTrip()) {
@@ -447,10 +427,10 @@ public class AlertMapper {
     }
 
 
-    private static void mapTripDescriptor(GtfsRealtime.TripDescriptor tripDescriptor, AffectedVehicleJourneyStructure vehicleJourney) {
+    private void mapTripDescriptor(GtfsRealtime.TripDescriptor tripDescriptor, AffectedVehicleJourneyStructure vehicleJourney) {
         if (StringUtils.isNotEmpty(tripDescriptor.getStartDate())) {
             try {
-                Date startDate = DATE_FORMATTER.parse(tripDescriptor.getStartDate());
+                Date startDate = yyyyMMddFormatter.parse(tripDescriptor.getStartDate());
                 ZonedDateTime departureTime = ZonedDateTime.ofInstant(startDate.toInstant(), ZoneId.systemDefault());
                 vehicleJourney.setOriginAimedDepartureTime(departureTime);
             } catch (ParseException e) {
@@ -515,7 +495,7 @@ public class AlertMapper {
 
         if (alert.getActivePeriodList().isEmpty() && activePeriodDays != null) {
             String situationNumber = ptSituationElement.getSituationNumber().getValue();
-            long startSeconds = 0;
+            long startSeconds;
 
             if (sxStartActivePeriodMap.containsKey(situationNumber)) {
                 startSeconds = sxStartActivePeriodMap.get(situationNumber);
@@ -525,11 +505,11 @@ public class AlertMapper {
             }
             ZonedDateTime startTime = Instant.ofEpochSecond(startSeconds).atZone(ZoneId.systemDefault());
 
-            long endSeconds = 0;
+            long endSeconds;
             if (sxEndActivePeriodMap.containsKey(situationNumber)) {
                 endSeconds = sxEndActivePeriodMap.get(situationNumber);
             } else {
-                endSeconds = startSeconds + (86400 * activePeriodDays);
+                endSeconds = startSeconds + (86400L * activePeriodDays);
                 sxEndActivePeriodMap.put(situationNumber, endSeconds);
             }
             ZonedDateTime endTime = Instant.ofEpochSecond(endSeconds).atZone(ZoneId.systemDefault());
@@ -570,6 +550,26 @@ public class AlertMapper {
         if (alert.getDescriptionText() != null) {
             ptSituationElement.getDescriptions().addAll(translate(alert.getDescriptionText()));
         }
+    }
+
+    private static void mapUrl(PtSituationElement ptSituationElement, GtfsRealtime.Alert alert) {
+        if (!alert.hasUrl() || CollectionUtils.isEmpty(alert.getUrl().getTranslationList())) {
+            return;
+        }
+        PtSituationElement.InfoLinks infoLinks = new PtSituationElement.InfoLinks();
+        infoLinks.getInfoLinks().addAll(
+                alert.getUrl().getTranslationList().stream()
+                        .map(GtfsRealtime.TranslatedString.Translation::getText)
+                        .distinct()
+                        .map(
+                    t -> {
+                        InfoLinkStructure ils = new InfoLinkStructure();
+                        ils.setUri(t);
+                        return ils;
+                    }
+                ).distinct().toList()
+        );
+        ptSituationElement.setInfoLinks(infoLinks);
     }
 
     private static List<DefaultedTextStructure> translate(GtfsRealtime.TranslatedString gtfsTranslatedString) {
